--- a/engine/dlib/data/profiler3.html
+++ b/engine/dlib/data/profiler3.html
@@ -64,7 +64,7 @@ body {
   opacity:0.8;
 }
 
-div.profilerProgres {
+div.profilerProgress {
     position: absolute;
     left: 50%;
     width: 20em;
@@ -91,7 +91,7 @@ div.profilerProgres {
 </head>
 
 <body>
-<div id="capturing" class="alert alert-info profilerProgres" style="display: none;">
+<div id="capturing" class="alert alert-info profilerProgress" style="display: none;">
 Capturing - <span id="captureCount"></span>
 </div>
 
